src/pages/CataloguePage/CataloguePage.scss
.catalogue {
  background-color: #f9f9f9;
  width: 100%;
  height: 100%;
  font-family: "Roboto";
  padding-top: 50px;
}

.settings {
  margin-bottom: 10px;
  width: 100%;
  height: 50px;
  background-color: white;
  display: flex;
  justify-content: space-between;
  align-items: center;

  &__reset {
    width: 248px;
    height: 100%;
    background-color: #333333;
    color: #f9f9f9;
  }

  &__reset:hover {
    background-color: #f9f9f9;
    color: #333333;
    border: 1px solid #333333;
    transition: 0.5s;
  }

  &__sort {
    width: 200px;
    height: 60%;
    font-size: 16px;
    padding: 0 0 0 20px;
    cursor: pointer;
  }
}

.layout-mode {
  display: flex;
  gap: 10px;

  &__two,
  &__three,
  &__four {
    display: block;
    text-align: center;
    width: 40px;
    height: 40px;
    cursor: pointer;
  }

  &__two:hover,
  &__three:hover,
  &__four:hover {
    transform: scale(1.1);
    transition: 0.5s;
  }
}

.active-layout {
  box-shadow: 0 0 10px 5px rgb(194, 188, 188);
}

.filters-goods-wrapper {
  padding: 0 0 50px 0;
  display: flex;
}

.filters {
  display: flex;
  flex-direction: column;
  background-color: white;
  padding: 10px;
  gap: 20px;

  &__checkbox_brand {
    height: 200px;
    overflow: scroll;
    overflow-x: hidden;
    scrollbar-color: #333333 #f9f9f9;
    scrollbar-width: thin;
  }

  &__copy-link {
    margin-top: 30px;
    width: 100%;
    height: 50px;
    background-color: #333333;
    color: #f9f9f9;
  }

  &__copy-link:hover {
    background-color: #f9f9f9;
    color: #333333;
    border: 1px solid #333333;
    transition: 0.5s;
  }
}

::-webkit-scrollbar {
  width: 5px;
  background-color: #f9f9f9;
}

::-webkit-scrollbar-thumb {
  background-color: #333333;
  border-radius: 9em;
  box-shadow: inset 1px 1px 10px #333333;
}

.goods {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  column-gap: calc(68px / 3);
  padding: 20px 0 20px 20px;

  &__item {
    position: relative;
    width: 260px;
    box-shadow: 0 10px 18px -9px rgb(194, 188, 188);
    margin-bottom: 20px;
  }

  &__image {
    width: 260px;
    height: 384px;
    cursor: pointer;
  }

  &__title {
    padding-left: 10px;
    font-family: "Marcellus";
  }

  &__price,
  &__rating {
    margin: 0 0 10px 0;
    padding-left: 10px;
  }

  &__price {
    font-size: 20px;
  }

  &__actions {
    position: absolute;
    top: 0;
    right: 25px;
  }
}

.action-btn {
  width: 200%;
  border: 0;
  height: 40px;
  background-color: rgba(51, 51, 51, 0.5);
}

.action-btn:hover {
  transition: 0.5s;
  transform: scale(1.1);
  background-color: #333333;
}

.not-found {
  margin: 10% auto 0 auto;
  font-size: 30px;
  font-weight: 600;
  font-family: "Marcellus";
  display: none;
}

